[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/Tile_Cleaner/Bitmask_Edges_Editor.gd" type="Script" id=1]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Up_Normal.png" type="Texture" id=2]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Up_Pressed.png" type="Texture" id=3]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Up_Hover.png" type="Texture" id=4]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Up_Disabled.png" type="Texture" id=5]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Down_Normal.png" type="Texture" id=6]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Down_Pressed.png" type="Texture" id=7]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Down_Hover.png" type="Texture" id=8]
[ext_resource path="res://addons/Tile_Cleaner/Buttons/Btn_Down_Disabled.png" type="Texture" id=9]

[node name="Bitmask_Edges_Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite_Container" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 198.967
margin_right = 20.0
margin_bottom = 238.967

[node name="Tile" type="Sprite" parent="Sprite_Container"]
region_enabled = true

[node name="ID_Selector" type="Control" parent="."]
margin_left = 67.8298
margin_top = 192.938
margin_right = 107.83
margin_bottom = 232.938

[node name="Next_ID_Button" type="TextureButton" parent="ID_Selector"]
margin_left = 5.0
margin_top = -30.0
margin_right = 21.0
margin_bottom = -14.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 4 )

[node name="Prev_ID_Button" type="TextureButton" parent="ID_Selector"]
margin_left = 5.0
margin_top = 30.0
margin_right = 21.0
margin_bottom = 46.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 9 )
texture_focused = ExtResource( 8 )

[node name="ID_Label" type="Label" parent="ID_Selector"]
margin_left = -7.31506
margin_top = 2.43835
margin_right = 32.6849
margin_bottom = 16.4384
grow_horizontal = 2
text = "0"
align = 1
